--- a/src/Test/Test.csproj
+++ b/src/Test/Test.csproj
@@ -287,6 +287,7 @@
     <Compile Include="DictionaryForMIDsConvert\DictionaryForMIDsTests.cs" />
     <Compile Include="epubConvert\EpubDictionaryExportTest.cs" />
     <Compile Include="epubConvert\EpubXsltTransformationTest.cs" />
+    <Compile Include="epubConvert\ExportHtml5Test.cs" />
     <Compile Include="GoBibleConvert\ExportGoBibleTest.cs">
       <SubType>Form</SubType>
     </Compile>
