--- a/DistFiles/DistFiles.csproj
+++ b/DistFiles/DistFiles.csproj
@@ -312,6 +312,7 @@
     <Copy SourceFiles="@(SeHelp)" DestinationFiles="@(SeHelp->'$(OutputPath)Help\Pathway_Configuration_Tool.chm')" Condition=" '$(Edition)' == 'SE' " />
     <Copy SourceFiles="@(BteStudent)" DestinationFiles="@(BteStudent->'$(OutputPath)Help\Pathway_Student_Manual.pdf')" Condition=" '$(Edition)' == 'BTE' or '$(Edition)' == 'EPUB'  " />
     <Copy SourceFiles="@(SeStudent)" DestinationFiles="@(SeStudent->'$(OutputPath)Help\Pathway_Student_Manual.pdf')" Condition=" '$(Edition)' == 'SE' " />
+	<Copy SourceFiles="@(DicHtml5)" DestinationFiles="@(DicHtml5->'$(OutputPath)Html5\Dictionary\%(RecursiveDir)%(Filename)%(Extension)')" />
     <Copy SourceFiles="@(Readme)" DestinationFolder="$(OutputPath)" />
     <Copy SourceFiles="@(License)" DestinationFolder="$(OutputPath)" />
     <Copy SourceFiles="@(Mets)" DestinationFolder="$(OutputPath)" />
@@ -358,6 +359,7 @@
     <SeHelp Include="Help\Pathway_Configuration_Tool_SE.chm" />
     <BteStudent Include="Training\Pathway_Student_Manual_BTE.pdf" />
     <SeStudent Include="Training\Pathway_Student_Manual_SE.pdf" />
+	<DicHtml5 Include="Html5\Dictionary\**\*.*" />
     <License Include="..\Installer\License.rtf" />
     <Readme Include="Readme\ReadMePw.rtf" />
     <Mets Include="mets.xml" />
